@@ -1,3 +1,8 @@
+2007-05-08  Alexandre Oliva  <aoliva@redhat.com>
+
+	* elf32-frv.c (elf32_frv_relocate_section): Discard dynamic relocs
+	for which _bfd_elf_section_offset returns -1.
+
 2007-05-08  Alan Modra  <amodra@bigpond.net.au>
 
 	* elf32-spu.c (spu_elf_size_stubs): Use "void *" for psyms.
